2007-06-12  Bastien Nocera  <hadess@hadess.net>

	* e-msg-composer.c: (composer_key_pressed):
	Add support for the XF86Send multimedia key
	(Closes: #442631)

2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #386503 from Matthew Barnes
	
	* e-msg-composer.c: (e_msg_composer_show_help):

2007-06-01  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #315012 from Pascal Terjan

	* e-msg-composer.c: (handle_multipart_signed),
	(handle_multipart_encrypted), (handle_multipart_alternative),
	(handle_multipart), (e_msg_composer_new_with_message): Pass mime part
	instead of multipart to camel_cipher_decryp

2007-04-19  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #429422

	* e-msg-composer-hdrs.c (init), (e_msg_composer_hdrs_new):
	Use g_object_ref_sink() instead of gtk_object_sink().

2007-04-09  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #356523 from Martin Olsson

	* e-msg-composer.c: (e_msg_composer_add_inline_image_from_file): Copies 
	the file uri and decodes it before trying to attach the image.

2007-04-05  Sankar P  <psankar@novell.com>

	* Patch committed on behalf of Paul Iadonisi <pri.gnome-bz@iadonisi.to>

	* e-msg-composer-hdrs.c: (create_from_optionmenu):
	Show only enabled accounts on composer.
	Look at bug #243241

2007-03-29  Matthew Barnes  <mbarnes@redhat.com>

	* e-msg-composer-select-file.c:
	Fix "incompatible pointer type" warnings (#360619).

2007-03-27  Matthew Barnes  <mbarnes@redhat.com>

	* e-msg-composer.c: Don't mix declarations and code (#405495).

2007-03-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #419524

	* Include <glib/gi18n.h> instead of <libgnome/gnome-i18n.h>.

2007-03-16  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #360240

	* e-msg-composer-hdrs (header_new_recipient):
	* e-msg-composer.c (e_msg_composer_show_help), (drop_action):
	Remove unused variables.

2007-02-26  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes #401546
