@@ -1,3 +1,9 @@
+2007-06-13  Sankar P  <psankar@novell.com>
+
+	* em-folder-view.c:
+	Fixes build break by including missing headers.
+	See #442631
+
 2007-06-12  Bastien Nocera  <hadess@hadess.net>
 
 	* em-folder-view.c: (emfv_list_key_press):
